--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -1,6 +1,6 @@
 base_url=https://lordwill1.github.io/todo-list/
 browser=chrome
-headless=false
+headless=true
 maximize=true
 timeout=350
 remote_server=false
